--- a/.github/workflows/UiPathBuildDeployRun-Tests.yml
+++ b/.github/workflows/UiPathBuildDeployRun-Tests.yml
@@ -1,8 +1,13 @@
 name: UiPathBuildDeployRun-Tests
-on:
-  pull_request:
-    branches: [ develop ]
+on: 
   workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'  
 jobs:
  remove-old-artifacts:
     runs-on: windows-latest
